--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,1 +1,36 @@
+name: Update Market Data
+
+on:
+  schedule:
+    - cron: "*/15 * * * *"
+  workflow_dispatch:
+
+jobs:
+  update:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Fetch market data
+        run: |
+          curl -s "https://query1.finance.yahoo.com/v7/finance/quote?symbols=RELIANCE.NS,TCS.NS,INFY.NS" \
+          | jq '.quoteResponse.result
+            | map({
+                symbol: (.symbol | sub("\\.NS"; "")),
+                price: .regularMarketPrice,
+                change: .regularMarketChangePercent
+              })' > data/market.json
+
+      - name: Commit and push
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add data/market.json
+          git commit -m "Update market data" || echo "No changes"
+          git push
 
